--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "webpackTest": "webpack"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^2.5.1"
+    "webpack": "^2.6.0",
+    "webpack-dev-server": "^2.4.5"
   }
 }
